# hk-netcash-candidates

./: .env.example  .gitignore  DEPLOY.md  README.md  a_dividend_etf_rank.csv  a_dividend_etf_rank.html  a_dividend_etf_rank.md  a_dividend_etf_realtime_quotes.csv  a_dividend_etf_universe.csv  a_dividend_etf_yield_history_stats.csv  eastmoney_hk_quotes.csv  expanded_quality_candidates.csv  expanded_quality_candidates.html  expanded_quality_candidates.md  governance_filtered_candidates.csv  governance_risk_overlay.csv  governance_risk_overlay.html  hk_all_scored_prefilter.csv  hk_loose_all_scored.csv  hk_loose_prefilter.csv  hk_loose_ranked_candidates.csv  hk_merged_universe.csv  hk_prefilter.csv  hk_ranked_candidates.csv  hk_ranked_candidates.md  hk_supplemental_candidates.csv  hkex_regulatory_2018_2026.csv  hkexnews_active_stock_map.csv  holdings_2026_06_30.csv  holdings_2026_06_30.html  holdings_2026_06_30.md  holdings_health_check.html  holdings_health_check_2026_07_01.csv  holdings_health_check_2026_07_01.html  holdings_health_check_2026_07_01.md  holdings_health_check_meta.json  index.html  llm_digest.html  llm_digest.json  llm_digest.md  (+23 more)
docs/: architecture.md  screening_algorithm.md
scripts/: a_dividend_etf_rank.py  hk_extended_quality_pool.py  hk_governance_risk_overlay.py  hk_markdown.py  hk_netcash_screen.py  hk_refresh_market_ranking.py  hk_render_public_index.py  hk_secondary_validation.py  hk_special_dividend_watchlist.py  hk_supplemental_extract.py  hk_target_property_review.py  holdings_health_check.py
src/hk_netcash_pipeline/: __init__.py  cli.py  llm.py  (+4 more)
